# markdown-memo-rs

./: README.md  biome.json  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  install-extra-dependencies.ps1  install-extra-dependencies.sh  release.yml
src/: api.ts  content-attr.ts  content-editor.ts  content-history.ts  content-tag.ts  main.ts  memo-card.ts  memo-element.ts  navigation-menu.ts  operation-bar.ts  search-bar.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  db.rs  error.rs  lib.rs  main.rs  model.rs
