[package]
name = "markdown-memo-rs"
version = "0.1.0"
authors = ["9506hqwy"]
# https://github.com/tauri-apps/tauri/issues/10412
edition = "2021"
rust-version = "1.85"
repository = "https://github.com/9506hqwy/markdown-memo-rs"
license = "MIT OR Apache-2.0"
keywords = ["markdown"]
categories = ["development-tools"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
dirs = "6.0.0"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-cli = "2.4.1"
uuid = { version = "1.18.1", features = ["v4"] }

[profile.release]
strip = "symbols"
lto = true
